# labs_2sem

./: .gitignore  .gitmodules  README.md  meeting_notes_10.11.2020.txt  notes.txt
CR/: CMakeLists.txt  build_and_run.sh  main.cpp
CR/.dbs-backup/: driverdb.csv  routedb.csv  truckdb.csv
CR/dbs/: driverdb.csv  routedb.csv  scheduledb.csv  truckdb.csv
CR/report/: report_cr.aux  report_cr.tex  report_cr.toc
CR/report/modules/: inputs.tex  title_page.tex
CR/report/modules/chapters/: 1-task.tex  10-tests.tex  11-conclusion.tex  12-biblio.tex  13-listing.tex  2-summary.tex  4-introduction.tex  5-input_files_formats.tex  6-programm_data_formats.tex  7-functions_description.tex  8-interface_description.tex  9-programm_algorithm.tex  conclusion.tex  data_structures_description.tex  goal.tex  introduction.tex  listing_bak.tex  summary.tex  task_defenition.tex
CR/report/modules/chapters/9-programm-algorithm/: dbs.tex  delivery.tex  driver.tex  driver_db.tex  driver_list.tex  input.tex  request_handler.tex  route_db.tex  route_list.tex  truck.tex  truck_brand.tex  truck_list.tex
CR/report/modules/inputs/: general.tex  specific.tex
CR/report/resources/: handle_request_diagram.drawio  overall_data_structure.drawio
CR/requests/: request1.csv  request_template.csv
CR/src/: date.cpp  date.h  destination.cpp  destination.h  driver.cpp  driver.h  libs.h  main.cpp  request.cpp  request.h  route.cpp  route.h  schedule.cpp  schedule.h  truck.cpp  truck.h  truck_brand.cpp  truck_brand.h
CR/src/admin/: administrator_console.cpp  administrator_console.h  input.cpp  input.h
CR/src/admin/sha256/: sha256.h
CR/src/common/: date.cpp  date.h  dbs.cpp  dbs.h  destination.cpp  destination.h  input.cpp  input.h  request.cpp  request.h  truck_brand.cpp  truck_brand.h
CR/src/db/: libdb.h
CR/src/db/driver/: driver.cpp  driver.h  driver_db.cpp  driver_db.h  driver_list.cpp  driver_list.h  lib_driver.h
CR/src/db/route/: lib_route.h  route.cpp  route.h  route_db.cpp  route_db.h  route_list.cpp  route_list.h
CR/src/db/schedule/: delivery.cpp  delivery.h  lib_schedule.h  schedule.cpp  schedule.h  schedule_db.cpp  schedule_db.h
CR/src/db/truck/: lib_truck.h  truck.cpp  truck.h  truck_db.cpp  truck_db.h  truck_list.cpp  truck_list.h
CR/src/driver/: driver.h  driver_db.cpp  driver_db.h  driver_list.cpp  driver_list.h  lib_driver.h
CR/src/request/: request.h
CR/src/request_handler/: request_handler.cpp  request_handler.h
CR/src/route/: route.h  route_db.cpp  route_db.h  route_list.cpp  route_list.h
CR/src/schedule/: schedule.cpp  schedule.h  schedule_db.cpp  schedule_db.h
CR/src/truck/: truck.cpp  truck.h  truck_db.cpp  truck_db.h  truck_list.cpp  truck_list.h
LR1/: CMakeLists.txt  delete_words_with_char.cpp  delete_words_with_char.h  files_lib.cpp  files_lib.h  main.cpp  strcat_impl.cpp
LR1/report/: report_lr1.aux  report_lr1.tex
LR1/report/resources/: data_schema.drawio
LR2/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  menu.cpp
LR2/report/: data_structures_description.tex  files_formats.tex  functions_description.tex  goal.tex  inputs.tex  listing.tex  programm_algorithm.tex  report_lr2.aux  report_lr2.tex  task_defenition.tex  tests.tex  title_page.tex
LR2/report/modules/chapters/: conclusion.tex  functions_description.tex  programm_algorithm.tex  task_defenition.tex  tests.tex
LR3/: CMakeLists.txt  main.cpp
LR3/truck/: truck.h  truck_db.h
report_template/: data_structures_description.tex  functions_description.tex  inputs.tex  report.tex  task_defenition.tex  tests.tex  useful_tips.txt
report_template/modules/: conclusion.tex  files_formats.tex  goal.tex  inputs.tex  listing.tex  programm_algorithm.tex  task_defenition.tex  title_page.tex
report_template/modules/chapters/: task_defenition.tex
report_template/modules/inputs/: general.tex
